--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "socket.io": "^4.0.1"
   },
   "devDependencies": {
     "got": "^11.3.0",
